--- a/inst/exerciceML/exerciceML.html
+++ b/inst/exerciceML/exerciceML.html
@@ -159,18 +159,26 @@ window.Quarto = {
 <h3 class="anchored" data-anchor-id="a-partir-de-la-table-de-confusion-recalculer-les-valeurs-des-trois-indicateurs-suivants-exactitude-sensibilité-spécificité.">A partir de la table de confusion, recalculer les valeurs des trois indicateurs suivants : exactitude, sensibilité, spécificité.</h3>
 <p>Exactitude :</p>
 <p><span class="math display">\[(439 + 127)/735 = 77\% \]</span></p>
-<p>Sensibilité : 90 %</p>
-<p>Spécificité : 52 %</p>
+<p>Sensibilité :</p>
+<p><span class="math display">\[
+439 / (439+50) = 90 \%
+\]</span></p>
+<p>Spécificité :</p>
+<p><span class="math display">\[
+(127) / (119 + 127) = 52 \%
+\]</span></p>
 </section>
-<section id="compléter-le-tableau-suivant-avec-les-performances-de-ce-première-modèle" class="level3">
-<h3 class="anchored" data-anchor-id="compléter-le-tableau-suivant-avec-les-performances-de-ce-première-modèle">Compléter le tableau suivant avec les performances de ce première modèle</h3>
+<section id="section" class="level3">
+<h3 class="anchored" data-anchor-id="section"></h3>
+<p>Compléter le tableau suivant avec les performances de ce première modèle.</p>
 <table class="table">
-<caption>Performances des modèles</caption>
+<caption>Performances de la regression logistique</caption>
 <colgroup>
-<col style="width: 43%">
-<col style="width: 17%">
-<col style="width: 17%">
-<col style="width: 17%">
+<col style="width: 30%">
+<col style="width: 16%">
+<col style="width: 18%">
+<col style="width: 18%">
+<col style="width: 15%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -178,6 +186,7 @@ window.Quarto = {
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
+<th>AUC</th>
 </tr>
 </thead>
 <tbody>
@@ -186,71 +195,37 @@ window.Quarto = {
 <td>77 %</td>
 <td>90 %</td>
 <td>52 %</td>
-</tr>
-<tr class="even">
-<td><em>Modèle 2 : arbre de classification</em></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="odd">
-<td><em>Modèle 3 : forêt aléatoire</em></td>
-<td></td>
-<td></td>
-<td></td>
-</tr>
-<tr class="even">
-<td><em>Modèle 4 : KNN</em></td>
-<td></td>
-<td></td>
-<td></td>
+<td>0,83</td>
 </tr>
 </tbody>
 </table>
 <p><em>Etape 6 : Revenir sur l’onglet “modèle” : choisir l’arbre et ajuster votre modèle sur les données d’entraînement (modèle 2 sur la base centrée réduite).</em></p>
 </section>
-<section id="combien-de-variables-prédictives-sont-utilisées-par-larbre-de-regression-pour-faire-des-estimations-sur-la-base-dentraînement" class="level3">
-<h3 class="anchored" data-anchor-id="combien-de-variables-prédictives-sont-utilisées-par-larbre-de-regression-pour-faire-des-estimations-sur-la-base-dentraînement">Combien de variables prédictives sont utilisées par l’arbre de regression pour faire des estimations sur la base d’entraînement ?</h3>
+<section id="combien-de-variables-prédictives-sont-utilisées-par-larbre-de-classification-pour-faire-des-estimations-sur-la-base-dentraînement" class="level3">
+<h3 class="anchored" data-anchor-id="combien-de-variables-prédictives-sont-utilisées-par-larbre-de-classification-pour-faire-des-estimations-sur-la-base-dentraînement">Combien de variables prédictives sont utilisées par l’arbre de classification pour faire des estimations sur la base d’entraînement ?</h3>
 <p>3 variables seulement sur les 11 variables disponibles : alcohol, free.sulfur.dioxide et volatile.acidity. Il s’agit des 3 variables les plus discriminantes selon l’algorithme CART.</p>
 </section>
 <section id="quelle-variable-a-été-choisie-en-premier-pour-séparer-la-population-en-deux-quel-est-la-valeur-seuil" class="level3">
 <h3 class="anchored" data-anchor-id="quelle-variable-a-été-choisie-en-premier-pour-séparer-la-population-en-deux-quel-est-la-valeur-seuil">Quelle variable a été choisie en premier pour séparer la population en deux ? Quel est la valeur seuil ?</h3>
 <p><em>Etape 7 : Dans l’onglet “Validation”, évaluer les performances du modèle 2 sur la base centrée réduite.</em></p>
 </section>
-<section id="pour-ce-deuxième-modèle-quelles-sont-les-valeurs-des-3-indicateurs-suivants-exactitude-sensibilité-et-spécificité" class="level3">
-<h3 class="anchored" data-anchor-id="pour-ce-deuxième-modèle-quelles-sont-les-valeurs-des-3-indicateurs-suivants-exactitude-sensibilité-et-spécificité">Pour ce deuxième modèle, quelles sont les valeurs des 3&nbsp;indicateurs suivants : exactitude, sensibilité et spécificité ?</h3>
-<p>Exactitude : 76 %</p>
-<p>Sensibilité : 80 %</p>
-<p>Spécificité : 67 %</p>
-</section>
-<section id="si-vous-privilégiez-lexactitude-quel-modèle-faut-il-choisir-si-vous-privilégiez-la-spécificité-quel-modèle-faut-il-choisir" class="level3">
-<h3 class="anchored" data-anchor-id="si-vous-privilégiez-lexactitude-quel-modèle-faut-il-choisir-si-vous-privilégiez-la-spécificité-quel-modèle-faut-il-choisir">Si vous privilégiez l’exactitude, quel modèle faut-il choisir ? Si vous privilégiez la spécificité, quel modèle faut-il choisir ?</h3>
-<p><em>Etape 8 : Ajuster la forêt aléatoire sur la base d’entraînement (dans l’onglet validation) et evaluer la performance du modèle.</em></p>
-</section>
-<section id="combien-darbres-ont-été-construits-par-défaut-par-lalgorithme" class="level3">
-<h3 class="anchored" data-anchor-id="combien-darbres-ont-été-construits-par-défaut-par-lalgorithme">Combien d’arbres ont été construits par défaut par l’algorithme&nbsp;?</h3>
-<p>Par défaut, l’algorithme construit 500 arbres de classification.</p>
-</section>
-<section id="de-combien-de-variables-sont-constitués-chaque-arbre-de-classification-est-ce-que-ce-sont-à-chaque-fois-les-mêmes-variables" class="level3">
-<h3 class="anchored" data-anchor-id="de-combien-de-variables-sont-constitués-chaque-arbre-de-classification-est-ce-que-ce-sont-à-chaque-fois-les-mêmes-variables">De combien de variables sont constitués chaque arbre de classification ? Est-ce que ce sont à chaque fois les mêmes variables ?</h3>
-<p>Chaque arbre est constitué par défaut de 3 variables tirées aléatoirement. Il y a donc une partie aléatoire qui va faire varier les indicateurs.</p>
-</section>
-<section id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles" class="level3">
-<h3 class="anchored" data-anchor-id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles">Noter les indicateurs dans le tableau comparatif des modèles</h3>
+<section id="compléter-le-tableau-suivant-avec-les-performances-de-ce-deuxi-me-modèle." class="level3">
+<h3 class="anchored" data-anchor-id="compléter-le-tableau-suivant-avec-les-performances-de-ce-deuxi-me-modèle.">Compléter le tableau suivant avec les performances de ce deuxi-me modèle.</h3>
 <table class="table">
-<caption>Performances des modèles</caption>
 <colgroup>
-<col style="width: 45%">
+<col style="width: 20%">
+<col style="width: 20%">
 <col style="width: 17%">
-<col style="width: 17%">
-<col style="width: 17%">
+<col style="width: 20%">
+<col style="width: 20%">
 </colgroup>
 <thead>
 <tr class="header">
-<th>Modèles</th>
+<th>Modèle retenu</th>
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
+<th>AUC</th>
 </tr>
 </thead>
 <tbody>
@@ -259,24 +234,71 @@ window.Quarto = {
 <td>77 %</td>
 <td>90 %</td>
 <td>52 %</td>
+<td>0,83</td>
 </tr>
 <tr class="even">
 <td><em>Modèle 2 : arbre de classification</em></td>
 <td>76 %</td>
 <td>80 %</td>
 <td>67 %</td>
+<td>0,77</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="si-vous-privilégiez-lexactitude-quel-modèle-est-le-plus-performant-si-vous-privilégiez-la-spécificité-quel-modèle-faut-il-choisir" class="level3">
+<h3 class="anchored" data-anchor-id="si-vous-privilégiez-lexactitude-quel-modèle-est-le-plus-performant-si-vous-privilégiez-la-spécificité-quel-modèle-faut-il-choisir">Si vous privilégiez l’exactitude, quel modèle est le plus performant ? Si vous privilégiez la spécificité, quel modèle faut-il choisir ?</h3>
+<p>La regression logistique est plus performante au regard de l’exactitude. Mais si on privilégie la spécificité, autrement dit on ne veut pas que notre modèle dise qu’un vin est mauvais à tort, alors il vaut mieux utiliser l’arbre de classification.</p>
+<p><em>Etape 8 : Ajuster la forêt aléatoire sur la base d’entraînement (dans l’onglet validation) et evaluer la performance du modèle.</em></p>
+</section>
+<section id="combien-darbres-ont-été-construits-par-défaut-par-lalgorithme" class="level3">
+<h3 class="anchored" data-anchor-id="combien-darbres-ont-été-construits-par-défaut-par-lalgorithme">Combien d’arbres ont été construits par défaut par l’algorithme&nbsp;?</h3>
+<p>Par défaut, l’algorithme construit 500 arbres de classification (Numbers of trees dans la sortie R).</p>
+</section>
+<section id="de-combien-de-variables-sont-constitués-chaque-arbre-de-classification-est-ce-que-ce-sont-à-chaque-fois-les-mêmes-variables" class="level3">
+<h3 class="anchored" data-anchor-id="de-combien-de-variables-sont-constitués-chaque-arbre-de-classification-est-ce-que-ce-sont-à-chaque-fois-les-mêmes-variables">De combien de variables sont constitués chaque arbre de classification ? Est-ce que ce sont à chaque fois les mêmes variables ?</h3>
+<p>Chaque arbre est constitué par défaut de 3 variables tirées aléatoirement (Mtry = 3). Il y a donc une partie aléatoire qui va faire varier les indicateurs.</p>
+</section>
+<section id="noter-les-indicateurs-de-performance-de-ce-troisième-modèle-dans-le-tableau-comparatif-ci-dessous" class="level3">
+<h3 class="anchored" data-anchor-id="noter-les-indicateurs-de-performance-de-ce-troisième-modèle-dans-le-tableau-comparatif-ci-dessous">Noter les indicateurs de performance de ce troisième modèle dans le tableau comparatif ci-dessous :</h3>
+<table class="table">
+<colgroup>
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Modèle retenu</th>
+<th>Exactitude</th>
+<th>Sensibilité</th>
+<th>Spécificité</th>
+<th>AUC</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>Modèle 1 : Regression logistique</em></td>
+<td>77 %</td>
+<td>90 %</td>
+<td>52 %</td>
+<td>0,83</td>
+</tr>
+<tr class="even">
+<td><em>Modèle 2 : arbre de classification</em></td>
+<td>76 %</td>
+<td>80 %</td>
+<td>67 %</td>
+<td>0,77</td>
 </tr>
 <tr class="odd">
 <td><em>Modèle 3 : forêt aléatoire</em></td>
 <td>83 %</td>
 <td>90 %</td>
 <td>70 %</td>
-</tr>
-<tr class="even">
-<td><em>Modèle 4 : KNN</em></td>
-<td></td>
-<td></td>
-<td></td>
+<td>0,89</td>
 </tr>
 </tbody>
 </table>
@@ -284,16 +306,17 @@ window.Quarto = {
 </section>
 <section id="quelle-valeur-par-défaut-de-k-a-été-retenue-dans-le-modèle-des-plus-proches-voisins" class="level3">
 <h3 class="anchored" data-anchor-id="quelle-valeur-par-défaut-de-k-a-été-retenue-dans-le-modèle-des-plus-proches-voisins">Quelle valeur par défaut de K a été retenue dans le modèle des plus proches voisins ?</h3>
+<p>Par défaut, la valeur retenue par l’algorithme est 5.</p>
 </section>
-<section id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles-1" class="level3">
-<h3 class="anchored" data-anchor-id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles-1">Noter les indicateurs dans le tableau comparatif des modèles</h3>
+<section id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles" class="level3">
+<h3 class="anchored" data-anchor-id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles">Noter les indicateurs dans le tableau comparatif des modèles</h3>
 <table class="table">
 <colgroup>
-<col style="width: 40%">
-<col style="width: 13%">
-<col style="width: 14%">
-<col style="width: 14%">
-<col style="width: 13%">
+<col style="width: 25%">
+<col style="width: 18%">
+<col style="width: 18%">
+<col style="width: 18%">
+<col style="width: 18%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -338,20 +361,21 @@ window.Quarto = {
 </section>
 <section id="quel-modèle-est-le-plus-performant-selon-les-différents-indicateurs-de-performance-retenus" class="level3">
 <h3 class="anchored" data-anchor-id="quel-modèle-est-le-plus-performant-selon-les-différents-indicateurs-de-performance-retenus">Quel modèle est le plus performant selon les différents indicateurs de performance retenus ?</h3>
+<p>Selon tous les indicateurs de performance, la forêt aléatoire avec 500 arbres et 3 variables sélectionnées aléatoirement, appliquée sur la base de données centrée réduite est la plus performante. C’est donc ce modèle qu’on va utiliser pour généraliser.</p>
 <p><em>Etape 10 : Sélectionner le modèle le plus performant que vous avez retenu précemment (dans l’onglet “modèle”), et dans l’onglet “généralisation”, ajuster le modèle.</em></p>
 </section>
 <section id="la-base-de-test-a-t-elle-été-utilisée-pour-construire-le-modèle-final" class="level3">
 <h3 class="anchored" data-anchor-id="la-base-de-test-a-t-elle-été-utilisée-pour-construire-le-modèle-final">La base de test a-t-elle été utilisée pour construire le modèle final ?</h3>
-<p>Non ! Le modèle final s’ajuste sur la base d’entraînement (70 % des données) et sur la base de validation (15 % des données).</p>
-<p><em><strong>Mise en situation 2 :</strong> Vous êtes le gouverneur de Grandile, la plus grande île de l’archipel de Ceph’ile. Vous disposez d’une base de données avec des informations sur 5&nbsp;418&nbsp;ménages habitants à Grandile, et notamment vous savez si ce ménage est pauvre ou non. Vous voulez être en capacité de prédire si un nouveau ménage est pauvre à partir des informations socio-économiques que vous aurez collecté.</em></p>
+<p>Non. Le modèle final s’ajuste sur la base d’entraînement (70 % des données) et sur la base de validation (15 % des données) : on intègre les individus de la base de validation pour améliorer la qualité de l’ajustement (plus on a d’individus, mieux le modèle apprend). On a donc retenu une méthode ensembliste (la forêt aléatoire) pour faire nos prédictions sur des données qui n’ont pas du tout servi à construire le modèle. Les performances sont similaires : nous voilà rassurés ! La mise en production devrait bien se passer.</p>
+<p><em><strong>Mise en situation 2 :</strong> Vous êtes le gouverneur de Grandile, la plus grande île de l’archipel de Ceph’ile. Vous disposez d’une base de données avec des informations sur 5&nbsp;418&nbsp;ménages habitants à Grandile, et notamment vous savez si ce ménage est pauvre ou non. Vous voulez être en capacité de prédire si un nouveau ménage est pauvre à partir des informations socio-économiques que vous aurez collectées.</em></p>
 <table class="table">
 <caption>Comparaison des performances des modèles sur la base de données Grandile (modèle ajusté sur 70% de la base brute, les indicateurs sont calculés à partir des prédictions sur la base de validation).</caption>
 <colgroup>
-<col style="width: 40%">
-<col style="width: 13%">
-<col style="width: 14%">
-<col style="width: 14%">
-<col style="width: 13%">
+<col style="width: 22%">
+<col style="width: 19%">
+<col style="width: 19%">
+<col style="width: 19%">
+<col style="width: 19%">
 </colgroup>
 <thead>
 <tr class="header">
@@ -396,9 +420,11 @@ window.Quarto = {
 </section>
 <section id="y-a-t-il-un-modèle-nettement-plus-performant-que-les-autres-pour-prédire-si-un-ménage-est-pauvre-à-grandile" class="level3">
 <h3 class="anchored" data-anchor-id="y-a-t-il-un-modèle-nettement-plus-performant-que-les-autres-pour-prédire-si-un-ménage-est-pauvre-à-grandile">Y a t il un modèle nettement plus performant que les autres pour prédire si un ménage est pauvre à Grandile ?</h3>
+<p>Non : tous les modèles ont des performances excellentes.</p>
 </section>
 <section id="quel-autre-critère-peut-entrer-en-jeu-dans-le-choix-dun-modèle-avant-de-le-généraliser" class="level3">
 <h3 class="anchored" data-anchor-id="quel-autre-critère-peut-entrer-en-jeu-dans-le-choix-dun-modèle-avant-de-le-généraliser">Quel autre critère peut entrer en jeu dans le choix d’un modèle avant de le généraliser ?</h3>
+<p>Dans ce cas, autant choisir un modèle économe en ressources informatiques. Le plus économe est la regression logistique, qui n’a besoin d’enregistrer que les paramètres associés à chaque variable pour généraliser.</p>
 </section>
 </section>
 <section id="partie-2-régression-supervisée" class="level2">
