init regression supervisée

--- a/inst/exerciceML/exerciceML.html
+++ b/inst/exerciceML/exerciceML.html
@@ -420,7 +420,7 @@ window.Quarto = {
 </section>
 <section id="y-a-t-il-un-modèle-nettement-plus-performant-que-les-autres-pour-prédire-si-un-ménage-est-pauvre-à-grandile" class="level3">
 <h3 class="anchored" data-anchor-id="y-a-t-il-un-modèle-nettement-plus-performant-que-les-autres-pour-prédire-si-un-ménage-est-pauvre-à-grandile">Y a t il un modèle nettement plus performant que les autres pour prédire si un ménage est pauvre à Grandile ?</h3>
-<p>Non : tous les modèles ont des performances excellentes.</p>
+<p>Non : tous les modèles ont des performances excellentes, grace aux variables revenu_disponible et PCS.</p>
 </section>
 <section id="quel-autre-critère-peut-entrer-en-jeu-dans-le-choix-dun-modèle-avant-de-le-généraliser" class="level3">
 <h3 class="anchored" data-anchor-id="quel-autre-critère-peut-entrer-en-jeu-dans-le-choix-dun-modèle-avant-de-le-généraliser">Quel autre critère peut entrer en jeu dans le choix d’un modèle avant de le généraliser ?</h3>
@@ -429,6 +429,22 @@ window.Quarto = {
 </section>
 <section id="partie-2-régression-supervisée" class="level2">
 <h2 class="anchored" data-anchor-id="partie-2-régression-supervisée">Partie 2 : Régression supervisée</h2>
+<p><em>Mise en situation 1 : vous cherchez à prévoir le niveau de pollution à Rennes à partir de donnnées sur les températures, nébulosité et le niveau de pollution de la veille. Le niveau de pollution se mesure par le taux d’ozone, les relevés de températures se font à plusieurs heures de la journée, tout comme la mesure de la nébulosité (durée d’ensoleillement). Dans la base de données ozone, vous disposez de plus d’un millier de relevés qui ont été effectués, à partir desquels vous devez élaborer le modèle de prévision le plus performant possible.</em></p>
+<p><em>Etape 1 : Dans l’onglet “données” : cliquer pour explorer la base de données ozone.</em></p>
+<section id="combien-de-relevés-ont-été-effectués" class="level3">
+<h3 class="anchored" data-anchor-id="combien-de-relevés-ont-été-effectués">Combien de relevés ont été effectués ?</h3>
+</section>
+<section id="quelle-variable-est-la-variable-à-prédire" class="level3">
+<h3 class="anchored" data-anchor-id="quelle-variable-est-la-variable-à-prédire">Quelle variable est la variable à prédire ?</h3>
+</section>
+<section id="combien-y-a-t-il-de-variables-prédictives-de-quels-types-sont-elles" class="level3">
+<h3 class="anchored" data-anchor-id="combien-y-a-t-il-de-variables-prédictives-de-quels-types-sont-elles">Combien y a t il de variables prédictives ? De quels types sont-elles ?</h3>
+</section>
+<section id="y-a-t-il-des-données-manquantes-dans-la-base-brute" class="level3">
+<h3 class="anchored" data-anchor-id="y-a-t-il-des-données-manquantes-dans-la-base-brute">Y a t il des données manquantes dans la base brute ?</h3>
+<p><em>Etape 2 : Dans l’onglet “préparation” : conserver 70 % de la base brute pour l’entraînement.</em></p>
+<p>Y a t il des données manquantes dans la base d’entraînement ?</p>
+</section>
 </section>
 
 </main>
