--- a/inst/exerciceML/exerciceML.html
+++ b/inst/exerciceML/exerciceML.html
@@ -174,15 +174,15 @@ window.Quarto = {
 <table class="table">
 <caption>Performances de la regression logistique</caption>
 <colgroup>
-<col style="width: 30%">
-<col style="width: 16%">
+<col style="width: 24%">
 <col style="width: 18%">
 <col style="width: 18%">
-<col style="width: 15%">
+<col style="width: 18%">
+<col style="width: 18%">
 </colgroup>
 <thead>
 <tr class="header">
-<th>Modèles</th>
+<th>Modèle testé</th>
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
@@ -215,13 +215,13 @@ window.Quarto = {
 <colgroup>
 <col style="width: 20%">
 <col style="width: 20%">
-<col style="width: 17%">
+<col style="width: 20%">
 <col style="width: 20%">
 <col style="width: 20%">
 </colgroup>
 <thead>
 <tr class="header">
-<th>Modèle retenu</th>
+<th>Modèle testé</th>
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
@@ -271,7 +271,7 @@ window.Quarto = {
 </colgroup>
 <thead>
 <tr class="header">
-<th>Modèle retenu</th>
+<th>Modèle testé</th>
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
@@ -312,15 +312,15 @@ window.Quarto = {
 <h3 class="anchored" data-anchor-id="noter-les-indicateurs-dans-le-tableau-comparatif-des-modèles">Noter les indicateurs dans le tableau comparatif des modèles</h3>
 <table class="table">
 <colgroup>
-<col style="width: 25%">
-<col style="width: 18%">
-<col style="width: 18%">
-<col style="width: 18%">
-<col style="width: 18%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
 </colgroup>
 <thead>
 <tr class="header">
-<th>Modèle retenu</th>
+<th>Modèle testé</th>
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
@@ -371,15 +371,15 @@ window.Quarto = {
 <table class="table">
 <caption>Comparaison des performances des modèles sur la base de données Grandile (modèle ajusté sur 70% de la base brute, les indicateurs sont calculés à partir des prédictions sur la base de validation).</caption>
 <colgroup>
-<col style="width: 22%">
-<col style="width: 19%">
-<col style="width: 19%">
-<col style="width: 19%">
-<col style="width: 19%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
+<col style="width: 20%">
 </colgroup>
 <thead>
 <tr class="header">
-<th>Modèle retenu</th>
+<th>Modèle testé</th>
 <th>Exactitude</th>
 <th>Sensibilité</th>
 <th>Spécificité</th>
@@ -443,11 +443,185 @@ window.Quarto = {
 <section id="y-a-t-il-des-données-manquantes-dans-la-base-brute" class="level3">
 <h3 class="anchored" data-anchor-id="y-a-t-il-des-données-manquantes-dans-la-base-brute">Y a t il des données manquantes dans la base brute ?</h3>
 <p><em>Etape 2 : Dans l’onglet “préparation” : conserver 70 % de la base brute pour l’entraînement.</em></p>
-<p>Y a t il des données manquantes dans la base d’entraînement ?</p>
+</section>
+<section id="y-a-t-il-des-données-manquantes-dans-la-base-dentraînement" class="level3">
+<h3 class="anchored" data-anchor-id="y-a-t-il-des-données-manquantes-dans-la-base-dentraînement">Y a t il des données manquantes dans la base d’entraînement ?</h3>
+<p><em>Etape 3 : Dans l’onglet “modèle”, choisir la forêt aléatoire et ajuster le modèle sur la base d’entraînement.</em></p>
+</section>
+<section id="regarder-le-message-dans-la-console-de-r-studio.-que-sest-il-passé" class="level3">
+<h3 class="anchored" data-anchor-id="regarder-le-message-dans-la-console-de-r-studio.-que-sest-il-passé">Regarder le message dans la console de R Studio. Que s’est-il passé ?</h3>
+</section>
+<section id="que-faire-quand-il-y-a-des-valeurs-manquantes-dans-vos-variables-prédictives-plusieurs-possibilités" class="level3">
+<h3 class="anchored" data-anchor-id="que-faire-quand-il-y-a-des-valeurs-manquantes-dans-vos-variables-prédictives-plusieurs-possibilités">Que faire quand il y a des valeurs manquantes dans vos variables prédictives ? (plusieurs possibilités)</h3>
+<p><em>Etape 4 : Dans l’onglet préparation, choisir la recette “imputation avec la moyenne” que vous appliquez sur la base d’entraînement.</em></p>
+</section>
+<section id="y-a-t-il-encore-des-données-manquantes" class="level3">
+<h3 class="anchored" data-anchor-id="y-a-t-il-encore-des-données-manquantes">Y a t il encore des données manquantes ?</h3>
+<p><em>Etape 5 : Dans l’onglet modèle, choisir à nouveau la forêt aléatoire et ajuster le modèle sur la base d’entraînement.</em></p>
+</section>
+<section id="combien-darbres-de-regression-ont-été-générés-de-combien-de-variables-sont-ils-constitués" class="level3">
+<h3 class="anchored" data-anchor-id="combien-darbres-de-regression-ont-été-générés-de-combien-de-variables-sont-ils-constitués">Combien d’arbres de regression ont été générés ? De combien de variables sont-ils constitués ?</h3>
+</section>
+<section id="au-regard-des-10-premiers-individus-affichés-les-estimations-des-valeurs-dozone-sont-elles-éloignées-des-valeurs-réellement-mesurées" class="level3">
+<h3 class="anchored" data-anchor-id="au-regard-des-10-premiers-individus-affichés-les-estimations-des-valeurs-dozone-sont-elles-éloignées-des-valeurs-réellement-mesurées">Au regard des 10 premiers individus affichés, les estimations des valeurs d’ozone sont-elles éloignées des valeurs réellement mesurées ?</h3>
+<p><em>Etape 6 : Dans l’onglet validation, évaluer les performances de ce premier modèle (forêt aléatoire) appliqué sur la base transformée (imputation des valeurs manquantes)</em></p>
+</section>
+<section id="noter-les-indicateurs-de-performance-de-ce-premier-modèle-dans-le-tableau-comparatif-ci-dessous" class="level3">
+<h3 class="anchored" data-anchor-id="noter-les-indicateurs-de-performance-de-ce-premier-modèle-dans-le-tableau-comparatif-ci-dessous">Noter les indicateurs de performance de ce premier modèle dans le tableau comparatif ci-dessous :</h3>
+<table class="table">
+<thead>
+<tr class="header">
+<th>Modèle testé</th>
+<th style="text-align: center;">RSS</th>
+<th style="text-align: center;">MSE</th>
+<th style="text-align: center;">RMSE</th>
+<th style="text-align: center;">R²</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>Modèle 1 : Forêt aléatoire</em></td>
+<td style="text-align: center;">39 362</td>
+<td style="text-align: center;">192</td>
+<td style="text-align: center;">13,9</td>
+<td style="text-align: center;">0,71</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="ce-modèle-a-t-il-de-bonnes-capacités-prédictives" class="level3">
+<h3 class="anchored" data-anchor-id="ce-modèle-a-t-il-de-bonnes-capacités-prédictives">Ce modèle a t il de bonnes capacités prédictives ?</h3>
+<p><em>Etape 7 : Dans les onglets modèles et validation, ajuster les autres algorithmes sur la base d’entraînement, et évaluer leurs performances.</em></p>
+</section>
+<section id="compléter-le-tableau-ci-dessous-avec-les-performances-des-autres-modèles" class="level3">
+<h3 class="anchored" data-anchor-id="compléter-le-tableau-ci-dessous-avec-les-performances-des-autres-modèles">Compléter le tableau ci-dessous avec les performances des autres modèles :</h3>
+<table class="table">
+<colgroup>
+<col style="width: 31%">
+<col style="width: 15%">
+<col style="width: 18%">
+<col style="width: 18%">
+<col style="width: 16%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Modèle testé sur la base avec imputation par la moyenne</th>
+<th style="text-align: center;">RSS</th>
+<th style="text-align: center;">MSE</th>
+<th style="text-align: center;">RMSE</th>
+<th style="text-align: center;">R²</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>Modèle 1 : Forêt aléatoire</em><a href="#fn1" class="footnote-ref" id="fnref1" role="doc-noteref"><sup>1</sup></a></td>
+<td style="text-align: center;">39 362</td>
+<td style="text-align: center;">192</td>
+<td style="text-align: center;">13,9</td>
+<td style="text-align: center;">0,71</td>
+</tr>
+<tr class="even">
+<td><em>Modèle 2 : Arbre de regression</em></td>
+<td style="text-align: center;">56 900</td>
+<td style="text-align: center;">278</td>
+<td style="text-align: center;">16,7</td>
+<td style="text-align: center;">0,59</td>
+</tr>
+<tr class="odd">
+<td><em>Modèle 3 : Régression linéaire</em></td>
+<td style="text-align: center;">45 416</td>
+<td style="text-align: center;">222</td>
+<td style="text-align: center;">14,9</td>
+<td style="text-align: center;">0,68</td>
+</tr>
+<tr class="even">
+<td><em>Modèle 4 : KNN</em></td>
+<td style="text-align: center;">46 744</td>
+<td style="text-align: center;">228</td>
+<td style="text-align: center;">15,1</td>
+<td style="text-align: center;">0,66</td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="quel-algorithme-est-le-plus-performant-pour-prédire" class="level3">
+<h3 class="anchored" data-anchor-id="quel-algorithme-est-le-plus-performant-pour-prédire">Quel algorithme est le plus performant pour prédire ?</h3>
+<p><em>Etape 8 : dans l’onglet “généralisation”, ajuster la forêt aléatoire sur la base d’entraînement et la base de validation.</em></p>
+</section>
+<section id="les-trois-premiers-indicateurs-rss-mse-rmse-ont-une-valeur-supérieure-à-ceux-mesurés-dans-létape-précédente.-etait-ce-prévisible" class="level3">
+<h3 class="anchored" data-anchor-id="les-trois-premiers-indicateurs-rss-mse-rmse-ont-une-valeur-supérieure-à-ceux-mesurés-dans-létape-précédente.-etait-ce-prévisible">Les trois premiers indicateurs (RSS, MSE, RMSE) ont une valeur supérieure à ceux mesurés dans l’étape précédente. Etait-ce prévisible ?</h3>
+</section>
+<section id="le-r²-se-rapproche-de-1.-etait-ce-prévisible" class="level3">
+<h3 class="anchored" data-anchor-id="le-r²-se-rapproche-de-1.-etait-ce-prévisible">Le R² se rapproche de 1. Etait-ce prévisible ?</h3>
+<p><em>Mise en situation 2 : En tant que gouverneur de Grandile, vous souhaitez disposer du maximum d’information sur vos résidents. Notamment, vous voulez connaître leurs revenus disponibles, information que les Grandiliens ne sont pas toujours prêts à donner. A partir de la base de données grandile, choisissez l’algorithme le plus performant pour prédire le revenu disponible d’un ménage à partir des autres informations socio-économiques.</em></p>
+</section>
+<section id="compléter-le-tableau-pour-comparer-les-performances-des-algorithmes." class="level3">
+<h3 class="anchored" data-anchor-id="compléter-le-tableau-pour-comparer-les-performances-des-algorithmes.">Compléter le tableau pour comparer les performances des algorithmes.</h3>
+<table class="table">
+<colgroup>
+<col style="width: 25%">
+<col style="width: 18%">
+<col style="width: 18%">
+<col style="width: 18%">
+<col style="width: 18%">
+</colgroup>
+<thead>
+<tr class="header">
+<th>Modèle testé sur la base avec imputation par la moyenne</th>
+<th style="text-align: center;">RSS</th>
+<th style="text-align: center;">MSE</th>
+<th style="text-align: center;">RMSE</th>
+<th style="text-align: center;">R²</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td><em>Modèle 1 : Forêt aléatoire</em><a href="#fn2" class="footnote-ref" id="fnref2" role="doc-noteref"><sup>2</sup></a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="even">
+<td><em>Modèle 2 : Arbre de regression</em></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="odd">
+<td><em>Modèle 3 : Régression linéaire</em></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+<tr class="even">
+<td><em>Modèle 4 : KNN</em></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"></td>
+</tr>
+</tbody>
+</table>
+</section>
+<section id="quel-algorithme-est-le-plus-performant" class="level3">
+<h3 class="anchored" data-anchor-id="quel-algorithme-est-le-plus-performant">Quel algorithme est le plus performant ?</h3>
+</section>
+<section id="ajuster-ce-modèle-sur-la-base-dentraînement-et-de-validation-puis-généraliser-le-sur-des-données-quil-na-jamais-vu-les-données-de-test" class="level3">
+<h3 class="anchored" data-anchor-id="ajuster-ce-modèle-sur-la-base-dentraînement-et-de-validation-puis-généraliser-le-sur-des-données-quil-na-jamais-vu-les-données-de-test">Ajuster ce modèle sur la base d’entraînement et de validation puis généraliser le sur des données qu’il n’a jamais vu (les données de test)</h3>
 </section>
 </section>
 
-</main>
+
+<div id="quarto-appendix" class="default"><section id="footnotes" class="footnotes footnotes-end-of-document" role="doc-endnotes"><h2 class="anchored quarto-appendix-heading">Footnotes</h2>
+
+<ol>
+<li id="fn1"><p>Les valeurs ne sont pas les mêmes.<a href="#fnref1" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+<li id="fn2"><p>Les valeurs ne sont pas les mêmes.<a href="#fnref2" class="footnote-back" role="doc-backlink">↩︎</a></p></li>
+</ol>
+</section></div></main>
 <!-- /main column -->
 <script id="quarto-html-after-body" type="application/javascript">
 window.document.addEventListener("DOMContentLoaded", function (event) {
